--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
         <a href="https://www.snapchat.com/add/jacksmith1607" target="_blank" title="Snapchat">
             <i class="fab fa-snapchat"></i>
         </a>
+        <a href="https://www.tiktok.com/@jacksmith1607" target="_blank" title="TikTok">
+            <i class="fab fa-tiktok"></i>
+        </a>
         <a href="https://www.paypal.com/paypalme/jacksmith1607" target="_blank" title="PayPal">
             <i class="fab fa-paypal"></i>
         </a>
