--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <!-- Email Pop-Up -->
     <div id="email-popup" class="popup">
-        <p>If the email client doesn't open, you can click the link below to send an email:</p>
+        <p>Email is:</p>
         <p><strong><a href="mailto:jack@jacklsmith.co.uk" id="email-link-popup" target="_blank">jack@jacklsmith.co.uk</a></strong></p>
         <button onclick="closePopup()">Close</button>
     </div>
